--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
+    "react-router": "^7.3.0",
     "three": "^0.174.0",
     "vite": "^6.2.0"
   }
