--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-chessboard": "^4.7.2",
     "react-router": "^7.3.0",
     "three": "^0.174.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "websocket": "^1.0.35"
   }
 }
