--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "three": "^0.174.0",
     "vite": "^6.2.0",
     "websocket": "^1.0.35"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   }
 }
